--- a/app/views/historials/index.html.erb
+++ b/app/views/historials/index.html.erb
@@ -7,3 +7,8 @@
     <h4>Reason: <%= historial.consult_reason %></h4>
   </div>
 <% end %>
+
+<%= link_to "Create a new historial", new_historial_path %>
+
+<%= link_to "back", root_path %>
+
