--- a/app/views/historials/new.html.erb
+++ b/app/views/historials/new.html.erb
@@ -1,4 +1,23 @@
 
 <h1> Create a new Historial </h1>
 
-<%= link_to "back", historials_path %>
+<% if @historial.errors.any? %>
+  <ul>
+    <% @historial.errors.full_messages.each do |msg| %>
+      <li> <%= msg %> </li>
+    <% end %>
+  </ul>
+<% end %>
+
+<%= form_for @historial do |f| %>
+  <div>
+    <%= f.label :owner_name  %>
+    <%= f.text_field :owner_name  %>
+    <div>
+    <%= f.label :consult_reason  %>
+    <%= f.text_field :consult_reason  %>
+    </div>
+    <%= f.submit %>
+  </div>
+<% end %>
+
