bootstrap and Buttons

--- a/app/views/historials/edit.html.erb
+++ b/app/views/historials/edit.html.erb
@@ -8,6 +8,10 @@
       <%= f.label :consult_reason  %>
       <%= f.text_field :consult_reason  %>
     </div>
+    <div>
+      <%= f.label :pet_name  %>
+      <%= f.text_field :pet_name  %>
+    </div>
       <%= f.submit %>
     </div>
   <% end %>
