--- a/app/views/historials/index.html.erb
+++ b/app/views/historials/index.html.erb
@@ -1,19 +1,22 @@
 
+
 <h1>Listing all the historials</h1>
 
 <table>
   <tr>
+    <th>ID</th>
     <th>Owner Name</th>
-    <th>Reason</th>
+    <th>Pet Name</th>
   </tr>
 
   <% @historials.each do |historial| %>
     <tr>
+      <td><%= historial.id %></td>
       <td><%= historial.owner_name %></td>
-      <td><%= historial.consult_reason %></td>
-      <td><%= link_to "Edit", edit_historial_path(historial) %></td>
-      <td><%= link_to "Delete", historial_path(historial), method: :delete, data: {confirm: "Are you sure you want to delete this historial?"} %></td>
-      <td><%= link_to "Show More", historial_path(historial) %></td>
+      <td><%= historial.pet_name %></td>
+      <td><%= link_to "Show More", historial_path(historial), class: "btn btn-xs btn-primary" %></td>
+      <td><%= link_to "Edit", edit_historial_path(historial),  class: "btn btn-xs btn-success" %></td>
+      <td><%= link_to "Delete", historial_path(historial), method: :delete, data: {confirm: "Are you sure you want to delete this historial?"}, class: "btn btn-xs btn-danger" %></td>
       </tr>
   <% end %>
 </table>
