new fields in historial

--- a/app/views/historials/edit.html.erb
+++ b/app/views/historials/edit.html.erb
@@ -5,12 +5,40 @@
       <%= f.label :owner_name  %>
       <%= f.text_field :owner_name  %>
     <div>
-      <%= f.label :consult_reason  %>
-      <%= f.text_field :consult_reason  %>
+      <%= f.label :owner_phone  %>
+      <%= f.text_field :owner_phone  %>
+    </div>
+    <div>
+      <%= f.label :owner_address  %>
+      <%= f.text_field :owner_address  %>
+    </div>
+    <div>
+      <%= f.label :owner_document  %>
+      <%= f.text_field :owner_document  %>
     </div>
     <div>
       <%= f.label :pet_name  %>
       <%= f.text_field :pet_name  %>
+    </div>
+    <div>
+      <%= f.label :pet_breed  %>
+      <%= f.text_field :pet_breed  %>
+    </div>
+    <div>
+      <%= f.label :pet_species  %>
+      <%= f.text_field :pet_species  %>
+    </div>
+    <div>
+      <%= f.label :pet_color  %>
+      <%= f.text_field :pet_color  %>
+    </div>
+    <div>
+      <%= f.label :pet_age  %>
+      <%= f.text_field :pet_age  %>
+    </div>
+    <div>
+      <%= f.label :consult_reason  %>
+      <%= f.text_area :consult_reason  %>
     </div>
       <%= f.submit %>
     </div>
