--- a/app/views/historials/new.html.erb
+++ b/app/views/historials/new.html.erb
@@ -10,18 +10,48 @@
 <% end %>
 
 <%= form_for @historial do |f| %>
+
   <div>
-    <%= f.label :owner_name  %>
-    <%= f.text_field :owner_name  %>
+      <%= f.label :owner_name  %>
+      <%= f.text_field :owner_name  %>
     <div>
-    <%= f.label :consult_reason  %>
-    <%= f.text_field :consult_reason  %>
+      <%= f.label :owner_phone  %>
+      <%= f.text_field :owner_phone  %>
     </div>
     <div>
-    <%= f.label :pet_name  %>
-    <%= f.text_field :pet_name  %>
+      <%= f.label :owner_address  %>
+      <%= f.text_field :owner_address  %>
     </div>
-    <%= f.submit %>
-  </div>
+    <div>
+      <%= f.label :owner_document  %>
+      <%= f.text_field :owner_document  %>
+    </div>
+    <div>
+      <%= f.label :pet_name  %>
+      <%= f.text_field :pet_name  %>
+    </div>
+    <div>
+      <%= f.label :pet_breed  %>
+      <%= f.text_field :pet_breed  %>
+    </div>
+    <div>
+      <%= f.label :pet_species  %>
+      <%= f.text_field :pet_species  %>
+    </div>
+    <div>
+      <%= f.label :pet_color  %>
+      <%= f.text_field :pet_color  %>
+    </div>
+    <div>
+      <%= f.label :pet_age  %>
+      <%= f.text_field :pet_age  %>
+    </div>
+    <div>
+      <%= f.label :consult_reason  %>
+      <%= f.text_area :consult_reason  %>
+    </div>
+    </div>
+      <%= f.submit %>
+    </div>
 <% end %>
 
