--- a/app/views/historials/show.html.erb
+++ b/app/views/historials/show.html.erb
@@ -1,7 +1,16 @@
 
 
 <h3> This is the owner name: <small> <%= @historial.owner_name %> </small> </h3>
+<h3> This is the owner phone: <small> <%= @historial.owner_phone %> </small> </h3>
+<h3> This is the owner address: <small> <%= @historial.owner_address %> </small> </h3>
+<h3> This is the owner document: <small> <%= @historial.owner_document %> </small> </h3>
+<h3> This is the pet name: <small> <%= @historial.pet_name %> </small> </h3>
+<h3> This is the pet breed: <small> <%= @historial.pet_breed %> </small> </h3>
+<h3> This is the pet species: <small> <%= @historial.pet_species %> </small> </h3>
+<h3> This is the pet color: <small> <%= @historial.pet_color %> </small> </h3>
+<h3> This is the pet age: <small> <%= @historial.pet_age %> </small> </h3>
 <h3> This is the reason: <small> <%= @historial.consult_reason %> </small> </h3>
+
 
 <%= link_to "Edit", edit_historial_path(@historial) %></td>
 <%= link_to "Delete", historial_path(@historial), method: :delete, data: {confirm: "Are you sure you want to delete this historial?"} %></td>
