--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -4,6 +4,6 @@
   
 </div>
 
-<%= link_to "Show Historial", historials_path %>
+<%= link_to "Show Historial", historials_path, class: "btn btn-xs btn-primary" %>
 
-<%= link_to "About us ", about_path %>
+<%= link_to "About us ", about_path,  class: "btn btn-xs btn-success" %>
