--- a/app/views/historials/index.html.erb
+++ b/app/views/historials/index.html.erb
@@ -1,14 +1,16 @@
 
 
-<h1>Listing all the historials</h1>
+<div class="well well-lg"><h1>Listing all the historials</h1></div>
 
-<table>
+<div class="panel panel-default">
+  <div class="panel-body">
+  <table class="table table-bordered">
   <tr>
-    <th>ID</th>
-    <th>Owner Name</th>
-    <th>Pet Name</th>
+  <th><span class="label label-default">ID</span></th>
+  <th><span class="label label-default">Owner Name</span></th>
+  <th><span class="label label-default">Pet Name</span></th>
   </tr>
-
+  
   <% @historials.each do |historial| %>
     <tr>
       <td><%= historial.id %></td>
@@ -17,11 +19,12 @@
       <td><%= link_to "Show More", historial_path(historial), class: "btn btn-xs btn-primary" %></td>
       <td><%= link_to "Edit", edit_historial_path(historial),  class: "btn btn-xs btn-success" %></td>
       <td><%= link_to "Delete", historial_path(historial), method: :delete, data: {confirm: "Are you sure you want to delete this historial?"}, class: "btn btn-xs btn-danger" %></td>
-      </tr>
+       </tr>
   <% end %>
-</table>
+  </table>
+  </div>
+</div>
 
-<%= link_to "Create a new historial", new_historial_path %>
-
-<%= link_to "back", root_path %>
+<%= link_to "Create a new historial", new_historial_path, class: "btn btn-xs btn-success" %>
+<%= link_to "back", root_path, class: "btn btn-xs btn-warning" %>
 
