--- a/app/views/historials/show.html.erb
+++ b/app/views/historials/show.html.erb
@@ -1,6 +1,6 @@
 
 
-<h3> This is the owner name: <small> <%= @historial.owner_name %> </small> </h3>
+<h3> This is the owner name: <small> <%= @historial.owner_name %> </normal> </h3>
 <h3> This is the owner phone: <small> <%= @historial.owner_phone %> </small> </h3>
 <h3> This is the owner address: <small> <%= @historial.owner_address %> </small> </h3>
 <h3> This is the owner document: <small> <%= @historial.owner_document %> </small> </h3>
@@ -12,6 +12,6 @@
 <h3> This is the reason: <small> <%= @historial.consult_reason %> </small> </h3>
 
 
-<%= link_to "Edit", edit_historial_path(@historial) %></td>
-<%= link_to "Delete", historial_path(@historial), method: :delete, data: {confirm: "Are you sure you want to delete this historial?"} %></td>
-<%= link_to "Back", historials_path %></td>
+<%= link_to "Edit", edit_historial_path(@historial),  class: "btn btn-xs btn-success" %></td>
+<%= link_to "Delete", historial_path(@historial), method: :delete, data: {confirm: "Are you sure you want to delete this historial?"}, class: "btn btn-xs btn-danger" %></td>
+<%= link_to "Back", historials_path, class: "btn btn-xs btn-warning" %></td>
