--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+<nav class="navbar navbar-light" style="background-color: #23374D;">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<tr>
+<td><a class="navbar-brand" href="#">VetClinic</a></td>
+<td><a class="navbar-brand" href=/historials/new>Create New Historial</a></td>
+</tr>
+ 
+
+</nav>
+</nav>
+
   <head>
     <title>VetClinic</title>
     <%= csrf_meta_tags %>
