--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,11 +3,9 @@
 <nav class="navbar navbar-light" style="background-color: #23374D;">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 <tr>
-<td><a class="navbar-brand" href="#">VetClinic</a></td>
+<td><a class="navbar-brand" href=/ >VetClinic</a></td>
 <td><a class="navbar-brand" href=/historials/new>Create New Historial</a></td>
 </tr>
- 
-
 </nav>
 </nav>
 
