--- a/app/views/historials/edit.html.erb
+++ b/app/views/historials/edit.html.erb
@@ -1,46 +1,63 @@
 <h4> Edit page </h4>
 
 <%= form_for @historial do |f| %>
-    <div>
-      <%= f.label :owner_name  %>
-      <%= f.text_field :owner_name  %>
-    <div>
-      <%= f.label :owner_phone  %>
-      <%= f.text_field :owner_phone  %>
+  <div class="panel panel-default">
+    <div class="panel-body">  
+  <table class="table table-bordered">
+      <tr>
+        <td>
+          <%= f.label :owner_name  %>
+          <%= f.text_field :owner_name  %>
+        </td>
+        <td>
+          <%= f.label :owner_phone  %>
+          <%= f.text_field :owner_phone  %>
+        </td> 
+        <td>
+          <%= f.label :owner_address  %>
+          <%= f.text_field :owner_address  %>
+        </td>
+        </tr>
+  
+        <tr>
+        <td>
+          <%= f.label :owner_document  %>
+          <%= f.text_field :owner_document  %>
+        </td>
+        <td>
+          <%= f.label :pet_name  %>
+          <%= f.text_field :pet_name  %>
+        </td>
+        <td>
+          <%= f.label :pet_breed  %>
+          <%= f.text_field :pet_breed  %>
+        </td>
+        </tr>
+  
+        <tr>
+        <td>
+          <%= f.label :pet_species  %>
+          <%= f.text_field :pet_species  %>
+        </td>
+        <td>
+          <%= f.label :pet_color  %>
+          <%= f.text_field :pet_color  %>
+        </td>
+        <td>
+          <%= f.label :pet_age  %>
+          <%= f.text_field :pet_age  %>
+        </td>
+        </tr>
+  
+        <tr>
+        <td>
+          <%= f.label :consult_reason  %>
+          <%= f.text_area :consult_reason  %>
+        </td>
+      </div>
+    </table>
     </div>
-    <div>
-      <%= f.label :owner_address  %>
-      <%= f.text_field :owner_address  %>
     </div>
-    <div>
-      <%= f.label :owner_document  %>
-      <%= f.text_field :owner_document  %>
-    </div>
-    <div>
-      <%= f.label :pet_name  %>
-      <%= f.text_field :pet_name  %>
-    </div>
-    <div>
-      <%= f.label :pet_breed  %>
-      <%= f.text_field :pet_breed  %>
-    </div>
-    <div>
-      <%= f.label :pet_species  %>
-      <%= f.text_field :pet_species  %>
-    </div>
-    <div>
-      <%= f.label :pet_color  %>
-      <%= f.text_field :pet_color  %>
-    </div>
-    <div>
-      <%= f.label :pet_age  %>
-      <%= f.text_field :pet_age  %>
-    </div>
-    <div>
-      <%= f.label :consult_reason  %>
-      <%= f.text_area :consult_reason  %>
-    </div>
-      <%= f.submit %>
-    </div>
-  <% end %>
+    <%= f.submit%>
+    <% end %>
 
