--- a/app/views/historials/new.html.erb
+++ b/app/views/historials/new.html.erb
@@ -10,51 +10,62 @@
 <% end %>
 
 <%= form_for @historial do |f| %>
-  
-    <div>
-      <%= f.label :owner_name  %>
-      <%= f.text_field :owner_name  %>
-    <div>
-    <div>
-      <%= f.label :owner_phone  %>
-      <%= f.text_field :owner_phone  %>
-    </div>
-    <div>
-      <%= f.label :owner_address  %>
-      <%= f.text_field :owner_address  %>
-    </div>
-    <div>
-      <%= f.label :owner_document  %>
-      <%= f.text_field :owner_document  %>
-    </div>
-    <div>
-      <%= f.label :pet_name  %>
-      <%= f.text_field :pet_name  %>
-    </div>
-    <div>
-      <%= f.label :pet_breed  %>
-      <%= f.text_field :pet_breed  %>
-    </div>
-    <div>
-      <%= f.label :pet_species  %>
-      <%= f.text_field :pet_species  %>
-    </div>
-    <div>
-      <%= f.label :pet_color  %>
-      <%= f.text_field :pet_color  %>
-    </div>
-    <div>
-      <%= f.label :pet_age  %>
-      <%= f.text_field :pet_age  %>
-    </div>
-    <div>
-      <%= f.label :consult_reason  %>
-      <%= f.text_area :consult_reason  %>
-    </div>
-    </div>
-    
-      <%= f.submit %>
-    </div>
-<% end %>
+<div class="panel panel-default">
+  <div class="panel-body">  
+<table class="table table-bordered">
+    <tr>
+      <td>
+        <%= f.label :owner_name  %>
+        <%= f.text_field :owner_name  %>
+      </td>
+      <td>
+        <%= f.label :owner_phone  %>
+        <%= f.text_field :owner_phone  %>
+      </td> 
+      <td>
+        <%= f.label :owner_address  %>
+        <%= f.text_field :owner_address  %>
+      </td>
+      </tr>
 
-<%= link_to "Back", historials_path, class: "btn btn-xs btn-warning" %></td>
+      <tr>
+      <td>
+        <%= f.label :owner_document  %>
+        <%= f.text_field :owner_document  %>
+      </td>
+      <td>
+        <%= f.label :pet_name  %>
+        <%= f.text_field :pet_name  %>
+      </td>
+      <td>
+        <%= f.label :pet_breed  %>
+        <%= f.text_field :pet_breed  %>
+      </td>
+      </tr>
+
+      <tr>
+      <td>
+        <%= f.label :pet_species  %>
+        <%= f.text_field :pet_species  %>
+      </td>
+      <td>
+        <%= f.label :pet_color  %>
+        <%= f.text_field :pet_color  %>
+      </td>
+      <td>
+        <%= f.label :pet_age  %>
+        <%= f.text_field :pet_age  %>
+      </td>
+      </tr>
+
+      <tr>
+      <td>
+        <%= f.label :consult_reason  %>
+        <%= f.text_area :consult_reason  %>
+      </td>
+    </div>
+  </table>
+  </div>
+  </div>
+  <%= f.submit%>
+  <% end %>
