--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-<nav class="navbar navbar-light" style="background-color: #23374D;">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-<tr>
-<td><a class="navbar-brand" href=/ >VetClinic</a></td>
-<td><a class="navbar-brand" href=/historials/new>Create New Historial</a></td>
-</tr>
-</nav>
-</nav>
+
+<ul class="nav nav-pills" style="background-color: #23374D;" >
+  <h2 style="color:#E5E5E5;" > Vet Clinic </h2>
+  <ul class="nav nav-pills">
+  <li role="presentation"><a href="/">Home</a></li>
+  <li role="presentation"><a href="/historials">Show Historials</a></li>
+  <li role="presentation"><a href="/historials/new" >Create Historial</a></li>
+  <li role="presentation"><a href="/about">About us</a></li>
+</ul>
+</ul>
+
 
   <head>
     <title>VetClinic</title>
