--- a/app/views/historials/edit.html.erb
+++ b/app/views/historials/edit.html.erb
@@ -1,63 +1,64 @@
-<h4> Edit page </h4>
+<center><div class="well well-lg "><h3>Edit Page</h3></div></center>
 
 <%= form_for @historial do |f| %>
   <div class="panel panel-default">
     <div class="panel-body">  
-  <table class="table table-bordered">
-      <tr>
-        <td>
-          <%= f.label :owner_name  %>
-          <%= f.text_field :owner_name  %>
-        </td>
-        <td>
-          <%= f.label :owner_phone  %>
-          <%= f.text_field :owner_phone  %>
-        </td> 
-        <td>
-          <%= f.label :owner_address  %>
-          <%= f.text_field :owner_address  %>
-        </td>
-        </tr>
-  
+      <table class="table table-bordered">
         <tr>
-        <td>
-          <%= f.label :owner_document  %>
-          <%= f.text_field :owner_document  %>
-        </td>
-        <td>
-          <%= f.label :pet_name  %>
-          <%= f.text_field :pet_name  %>
-        </td>
-        <td>
-          <%= f.label :pet_breed  %>
-          <%= f.text_field :pet_breed  %>
-        </td>
+          <td>
+            <%= f.label :owner_name  %>
+            <%= f.text_field :owner_name  %>
+          </td>
+          <td>
+            <%= f.label :owner_phone  %>
+            <%= f.text_field :owner_phone  %>
+          </td> 
+          <td>
+            <%= f.label :owner_address  %>
+            <%= f.text_field :owner_address  %>
+          </td>
         </tr>
-  
+      
         <tr>
-        <td>
-          <%= f.label :pet_species  %>
-          <%= f.text_field :pet_species  %>
-        </td>
-        <td>
-          <%= f.label :pet_color  %>
-          <%= f.text_field :pet_color  %>
-        </td>
-        <td>
-          <%= f.label :pet_age  %>
-          <%= f.text_field :pet_age  %>
-        </td>
+          <td>
+            <%= f.label :owner_document  %>
+            <%= f.text_field :owner_document  %>
+          </td>
+          <td>
+            <%= f.label :pet_name  %>
+            <%= f.text_field :pet_name  %>
+          </td>
+          <td>
+            <%= f.label :pet_breed  %>
+            <%= f.text_field :pet_breed  %>
+          </td>
         </tr>
-  
+      
         <tr>
-        <td>
-          <%= f.label :consult_reason  %>
-          <%= f.text_area :consult_reason  %>
-        </td>
-      </div>
-    </table>
+          <td>
+            <%= f.label :pet_species  %>
+            <%= f.text_field :pet_species  %>
+          </td>
+          <td>
+            <%= f.label :pet_color  %>
+            <%= f.text_field :pet_color  %>
+          </td>
+          <td>
+            <%= f.label :pet_age  %>
+            <%= f.text_field :pet_age  %>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <%= f.label :consult_reason  %>
+            <%= f.text_area :consult_reason  %>
+          </td>
+        </tr>
+      </table>
     </div>
-    </div>
-    <%= f.submit%>
-    <% end %>
+  </div>
+   
+    <%= f.submit %>
+    <%= link_to "Back", historials_path, class: "btn btn-xs btn-warning" %>
 
+<% end %>
