--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,8 @@
 <div>
-  <h1> About </h1>
-  <p> This is the about page </p>
+  <center><h1> This is our Mision </h1></center>
+  <center><p> In this part your can write your Mision </p></center>
+  <center><h1> This is our Vision </h1></center>
+  <center><p> In this part your can write your Vision </p></center>
+  <p> You can comunicate by +57 0000000000 </p>
+
 </div>
