--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h1> Welcome </h1>
-  <p> This is the welcome page </p>
+  <center><h1> Welcome </h1></center>
+  <p> we serve all kinds of animals </p>
   
 </div>
