--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.tamano {
+    width: 50px;
+    height: 50px;
+    margin-left: 10px;
+}
+
+
