--- a/app/views/historials/index.html.erb
+++ b/app/views/historials/index.html.erb
@@ -1,28 +1,27 @@
 
 
-<div class="well well-lg "><h1>Listing all the historials</h1></div>
+<center><div class="well well-lg "><h3>Listing all the historials</h3></div></center>
 
 <div class="panel panel-default">
   <div class="panel-body">
-  <table class="table table-bordered">
-  <tr>
-  <th><span class="label label-default">ID</span></th>
-  <th><span class="label label-default">Owner Name</span></th>
-  <th><span class="label label-default">Pet Name</span></th>
-  </tr>
+    <table class="table table-bordered">
+      <tr>
+        <th><span class="label label-default">ID</span></th>
+        <th><span class="label label-default">Owner Name</span></th>
+        <th><span class="label label-default">Pet Name</span></th>
+      </tr>
   
-  <% @historials.each do |historial| %>
-    <tr>
-      <td><%= historial.id %></td>
-      <td><%= historial.owner_name %></td>
-      <td><%= historial.pet_name %></td>
-      <td><%= link_to "Show More", historial_path(historial), class: "btn btn-xs btn-primary" %></td>
-      <td><%= link_to "Edit", edit_historial_path(historial),  class: "btn btn-xs btn-success" %></td>
-      <td><%= link_to "Delete", historial_path(historial), method: :delete, data: {confirm: "Are you sure you want to delete this historial?"}, class: "btn btn-xs btn-danger" %></td>
-       </tr>
-  <% end %>
-  </table>
+      <% @historials.each do |historial| %>
+        <tr>
+          <td><%= historial.id %></td>
+          <td><%= historial.owner_name %></td>
+          <td><%= historial.pet_name %></td>
+          <td><%= link_to "Show More", historial_path(historial), class: "btn btn-xs btn-primary" %></td>
+          <td><%= link_to "Edit", edit_historial_path(historial),  class: "btn btn-xs btn-success" %></td>
+          <td><%= link_to "Delete", historial_path(historial), method: :delete, data: {confirm: "Are you sure you want to delete this historial?"}, class: "btn btn-xs btn-danger" %></td>
+        </tr>
+      <% end %>
+    </table>
   </div>
 </div>
-
 
