--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html> 
 
 <ul class="nav nav-pills" style="background-color: #23374D;" >
-  <h2 style="color:#E5E5E5;" > Vet Clinic </h2>
-  <ul class="nav nav-pills">
-  <li role="presentation"><a href="/">Home</a></li>
-  <li role="presentation"><a href="/historials">Show Historials</a></li>
-  <li role="presentation"><a href="/historials/new" >Create Historial</a></li>
-  <li role="presentation"><a href="/about">About us</a></li>
+    <h2 style="color:#E5E5E5; margin-left: 10px;" > Vet Clinic </h2>
+    <%= image_tag "logo.jpg", class: "img-responsive tamano" %>
+     <div class="container"> 
+      <ul class="nav nav-pills">
+          <li role="presentation"><a href="/">Home</a></li>
+          <li role="presentation"><a href="/historials">Show Historials</a></li>
+          <li role="presentation"><a href="/historials/new" >Create Historial</a></li>
+          <li role="presentation"><a href="/about">About us</a></li>
+        
+          <ul class="nav nav-pills navbar-right">
+            <button type="button" class="btn btn-default navbar-btn">Sign in</button>
+            <button type="button" class="btn btn-default navbar-btn">Sign up</button>
+          </ul>
+        </ul>
+      </div>
 </ul>
-</ul>
-
 
   <head>
-    <title>VetClinic</title>
+    <title>Vet Clinic</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -27,7 +34,8 @@
         <li> <%= msg %> </li>
       </ul>
     <% end %>
-
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
