--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,18 @@
 <div>
-  <center><h1> This is our Mision </h1></center>
-  <center><p> In this part your can write your Mision </p></center>
-  <center><h1> This is our Vision </h1></center>
-  <center><p> In this part your can write your Vision </p></center>
+  <center><h1> Mision </h1></center>
+  <center><p> Nuestra misión es ofrecer seguridad y bienestar a nuestros clientes y 
+  pacientes mediante la prestación de un servicio integral e innovador, desarrollando educación
+  continua en nuestros médicos veterinarios con el fin de mantener profesionales competitivos 
+  con un agudo sentido de responsabilidad social, buscando brindar la mayor satisfacción 
+  y bienestar posible a las mascotas como un miembro más de la familia. </p></center>
+
+  <center><h1> Vision </h1></center>
+  <center><p> Cómo empresa competitiva del sector de servicios de la salud, tenemos como visión 
+  el desarrollo de una conciencia social mediante la educación de nuestros clientes sobre los cuidados 
+  y necesidades de sus mascotas, haciéndonos así una empresa líder y un estandarte en la prestación 
+  de un servicio más innovador y moderno, con el aprovechamiento de nuevas tecnologías, con el fin de 
+  generar más bienestar y mejora social a nuestra comunidad de clientes. </p></center>
+
   <p> You can comunicate by +57 0000000000 </p>
 
 </div>
