--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,5 +1,6 @@
 <div>
   <center><h1> Welcome </h1></center>
-  <p> we serve all kinds of animals </p>
-  
+  <p> Hello, Vet @sifiefiajsfjko </p>
+  <p> this is the last update</p>
+  <p> You can create, update or delete your own clinicals historial</p>
 </div>
